--- a/src/DiscordConvert/Layout.fxml
+++ b/src/DiscordConvert/Layout.fxml
@@ -13,8 +13,8 @@
    <children>
       <HBox fillHeight="false">
          <children>
-            <TextField promptText="File" />
-            <Button mnemonicParsing="false" text="..." />
+            <TextField fx:id="fileTextField" promptText="File" prefWidth="200"/>
+            <Button fx:id="fileChooseButton" mnemonicParsing="false" text="..." />
          </children>
       </HBox>
       <Label text="Encoding" />
@@ -31,7 +31,7 @@
             <RadioButton mnemonicParsing="false" text="webm" toggleGroup="$codec" />
          </children>
       </VBox>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Convert" />
+      <Button fx:id="convertButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Convert" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
