Working on mac with no error handling

--- a/src/DiscordConvert/Layout.fxml
+++ b/src/DiscordConvert/Layout.fxml
@@ -20,7 +20,7 @@
       <Label text="Encoding" />
       <VBox style="-fx-alignment: center;">
          <children>
-            <RadioButton mnemonicParsing="false" text="mp4">
+            <RadioButton mnemonicParsing="false" text="mp4" selected="true">
                <toggleGroup>
                   <ToggleGroup fx:id="codecToggleGroup"/>
                </toggleGroup>
