--- a/src/DiscordConvert/Layout.fxml
+++ b/src/DiscordConvert/Layout.fxml
@@ -3,34 +3,44 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="5.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="mainVBox" spacing="5.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox fillHeight="false">
          <children>
-            <TextField fx:id="fileTextField" promptText="File" prefWidth="200"/>
+            <TextField fx:id="fileTextField" prefWidth="200" promptText="File" />
             <Button fx:id="fileChooseButton" mnemonicParsing="false" text="..." />
          </children>
       </HBox>
       <Label text="Encoding" />
-      <VBox style="-fx-alignment: center;">
+      <StackPane>
          <children>
-            <RadioButton mnemonicParsing="false" text="mp4" selected="true">
-               <toggleGroup>
-                  <ToggleGroup fx:id="codecToggleGroup"/>
-               </toggleGroup>
-               <VBox.margin>
-                  <Insets right="10.0" />
-               </VBox.margin>
-            </RadioButton>
-            <RadioButton mnemonicParsing="false" text="webm" toggleGroup="$codecToggleGroup" />
+            <VBox style="-fx-alignment: center-left;">
+               <children>
+                  <RadioButton mnemonicParsing="false" selected="true" text="mp4">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="codecToggleGroup" />
+                     </toggleGroup>
+                     <VBox.margin>
+                        <Insets right="10.0" />
+                     </VBox.margin>
+                  </RadioButton>
+                  <RadioButton mnemonicParsing="false" text="webm" toggleGroup="$codecToggleGroup" />
+               </children>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </VBox>
+            <ProgressIndicator fx:id="progressIndicator" prefHeight="20.0" style="-fx-progress-color: gray;" visible="false" StackPane.alignment="CENTER_RIGHT" />
          </children>
-      </VBox>
+      </StackPane>
       <Button fx:id="convertButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Convert" />
    </children>
    <padding>
